# DevReport

./: .gitignore  GitReport-Genrater.md  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  git.rs  llm.rs  mod.rs
src/components/common/: WelcomeGuide.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/pages/home/: HomePage.tsx
src/pages/projects/: ProjectForm.tsx  ProjectsPage.tsx
src/pages/report/: ReportPage.tsx
src/pages/settings/: SettingsPage.tsx
src/store/: useAppStore.ts
src/types/: index.ts
src/utils/: prompt.ts  time.ts
