[package]
name = "dev-report"
version = "1.0.0"
description = "Git-based automated report generator"
authors = ["DevReport"]
edition = "2021"

[lib]
name = "dev_report_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
